# advent-of-code

./: pyproject.toml
aoc2k25/: README.md  pyproject.toml
aoc2k25/day1/: day1.py
aoc2k25/day10/: day10.py
aoc2k25/day11/: day11.py
aoc2k25/day12/: day12.py
aoc2k25/day2/: day2.py
aoc2k25/day3/: day3.py
aoc2k25/day4/: PART2.md  day4.py
aoc2k25/day5/: day5.py
aoc2k25/day6/: PART2.md  day6.py  day6_p2.py
aoc2k25/day7/: day7.py
aoc2k25/day8/: day8.py
aoc2k25/day9/: day9.py
aoc2k25/src/aoc2k25/: __init__.py
