[project]
name = "aoc2k25"
version = "0.1.0"
description = "Advent of Code 2025 solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulp"
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/aoc2k25"]

[tool.hatch.build.targets.editable]
packages = ["src/aoc2k25"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []



